2010-03-09  Jackson Harper  <jackson@ximian.com>

	* playlist.h|cpp: Integrate the new ASX parser, to use this parser
	you need to set the env var MOONLIGHT_USE_INTERNAL_ASXPARSER.
	* asxparser.h|cpp: Some api updates so we can integrate with
	playlist.cpp easily.

2010-03-09  Chris Toshok  <toshok@ximian.com>

	* runtime.cpp (IsVersionSupported): report that we support SL4
	apps to remove the roadblock to starting them up.

2010-03-09  Chris Toshok  <toshok@ximian.com>

	* timemanager.cpp (TimeManager::TimeManager): set the initial
	source frequency here so when it's later started we don't get a
	g_warning.

2010-03-09  Chris Toshok  <toshok@ximian.com>

	* downloader.cpp (SendInternal): only emit
	DownloadFailedEvent (and create args) if we have listeners.
	(NotifyFailed): same.

2010-03-08  Chris Toshok  <toshok@ximian.com>

	* xaml.cpp (value_from_str_with_parser): when parsing a
	<sys:Double> element we have no prop_name, so fix this check so
	that it works in that case as well when dealing with NaN.

2010-03-08  Alan McGovern  <amcgovern@novell.com>

	* usercontrol.cpp: Remove unused variable.

2010-03-08  Alan McGovern  <amcgovern@novell.com>

	* src.mdp: Update the build files to add in some missing
	  files.

2010-03-08  Chris Toshok  <toshok@ximian.com>

	* runtime.cpp,h: add runtime_get_capture_service.

	* pal/capture/v4l2/pal-v4l2-video-capture.cpp,h: stub out the V4L2
	video capture implementation.

	* pal/capture/pal-linux-capture.cpp,h: stub out the linux capture
	stuff.

	* pal/pal.h: add the start of the media capture api.

	* enums.h: add MoonWaveFormatType.

2010-03-05  Alan McGovern  <amcgovern@novell.com>

	* provider.h:
	* provider.cpp:
	* frameworkelement.h:
	* frameworkelement.cpp:
	* dependencyobject.cpp: FrameworkElement.DataContext can
	  either inherit its value from its FrameworkElement.Parent or
	  its VisualParent. Implement a new provider which implements
	  this behaviour and remove 'DataContext' from the old
	  InheritedProvider.
