@@ -280,6 +280,7 @@ namespace Mono {
 		PROGRESSEVENTARGS,
 		PROGRESSIVESOURCE,
 		PROJECTION,
+		PROJECTIONEFFECT,
 		PROPERTYCHANGEDEVENTARGS,
 		PROPERTYPATH,
 		PULSESOURCE,
