@@ -1,3 +1,8 @@
+2010-02-24  David Reveman  <davidr@novell.com>
+
+	* effect.cpp:
+	* effect.h: Add ProjectionEffect class.
+
 2010-03-09  Jackson Harper  <jackson@ximian.com>
 
 	* playlist.h|cpp: Integrate the new ASX parser, to use this parser
